# simply-json-cpp

./: .clang-format  CMakeLists.txt  Dockerfile  LICENSE  LICENSE-3RD-PARTY  Makefile  README.md
cmake/: EnableInstalling.cmake  EnablePackaging.cmake  EnableTesting.cmake
src/: json.cpp  json.h  json_test.cpp  test-runner.cpp
